--- a/index.html
+++ b/index.html
@@ -2,20 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
-        <style>
-            p{
-                color:red;
-            }
-            .red{
-                height: 200px;
-                width: 100px;
-                background-color: red;
-            }
-            #boton-pago{
-                background-color: yellow;
-            }   
-        </style>
+        <title>Boletines</title>
+        <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
+        <link href="./assets/css/main.css" rel="stylesheet">        
     </head>
     <body>
         <div class="red"></div>
