--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <td>Ugis</td>
                             <td>Flores</td>
                             <td><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></td>
-                            <td>nada</td>
+                            <td><a href="./restaurantes/sensei.html">>></a></td>
                         </tr>
                         <tr>
                             <td>2</td>
