--- a/restaurantes/sensei.html
+++ b/restaurantes/sensei.html
@@ -5,6 +5,7 @@
         <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
         <link href="../assets/css/main.css" rel="stylesheet"> 
         <link href="../assets/fontawesome/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -18,9 +19,9 @@
                         <address> <i class="fa-solid fa-location-dot"></i>Terminal Once 
                         </address>
                     </div>
-                    <p>TEXTO DE PRUEBA 1</p>
-                    <p>TEXTO DE PRUEBA 1</p>
-                    <p>TEXTO DE PRUEBA 1</p>
+                    <p class="paragraph">TEXTO DE PRUEBA 1</p>
+                    <p class="paragraph">TEXTO DE PRUEBA 1</p>
+                    <p class="paragraph">TEXTO DE PRUEBA 1</p>
                 </section>
                 
             </div>
