--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
         <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
         <link href="./assets/css/main.css" rel="stylesheet"> 
         <link href="./assets/fontawesome/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet"> 
+        
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
             <div class ="content">
                 <header>
-                    <h1>Las mejores pizzas de mi ciudad.</h1>
+                    <h1 class="titulo">Las mejores pizzas de mi ciudad.</h1>
                 </header>
-                <table>
+                <table class="table">
                     <thead></thead>
                     <th>#</th>
                     <th>Nombre</th>
@@ -38,7 +40,7 @@
                             <td>3</td>
                             <td>Guerrin</td>
                             <td>San nicolás</td>
-                            <td><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></td>
+                            <td><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-o"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></td>
                             <td>La mejor</td>
                         </tr>
                     </tbody>
