--- a/restaurantes/sensei.html
+++ b/restaurantes/sensei.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class ="content">
                 <header>
-                    <h2>Ugis</h2>
+                    <h2 class="title-item" >Ugis</h2>
                 </header>
                 <section>
                     <img src="" alt="">
