--- a/restaurantes/sensei.html
+++ b/restaurantes/sensei.html
@@ -6,10 +6,11 @@
         <link href="../assets/css/main.css" rel="stylesheet"> 
         <link href="../assets/fontawesome/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     </head>
     <body>
         <div class="container">
-            <div class ="content">
+            <div class ="content animate__animated animate__fadeInDown" >
                 <div class="actions">
                     <a href="../" class="close"></a>
                     <span>X</span>
