--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
         <link href="./assets/css/main.css" rel="stylesheet"> 
         <link href="./assets/fontawesome/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet"> 
-        
+        <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
-            <div class ="content">
+            <div class ="content animate__animated animate__fadeInDown">
                 <header>
                     <h1 class="titulo">Las mejores pizzas de mi ciudad.</h1>
                 </header>
