--- a/restaurantes/sensei.html
+++ b/restaurantes/sensei.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
         <link href="../assets/css/main.css" rel="stylesheet"> 
         <link href="../assets/fontawesome/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet"> 
