--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <td>Guerrin</td>
                             <td>San nicolás</td>
                             <td><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-o"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></td>
-                            <td>La mejor</td>
+                            <td><a href="./restaurantes/sensei.html">>></a></td>
                         </tr>
                     </tbody>
 
