--- a/restaurantes/sensei.html
+++ b/restaurantes/sensei.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class ="content animate__animated animate__fadeInDown" >
                 <div class="actions">
-                    <a href="../" class="close"></a>
+                    <a href="../" class=".close"></a>
                     <span>X</span>
                 </div>  
                     <header>
